Thu Oct 26 00:51:52 2000  Tim Janik  <timj@gtk.org>

	* gtk/gtksignal.c:
	(gtk_signal_emitv): use g_value_set_static_{string|boxed} where
	applicable.

	* gtk/gtk-boxed.defs (GtkSelectionData): specify
	gtk_selection_data_copy and gtk_selection_data_free
	do GtkSelectionData work as params in signals.

Wed Oct 25 20:47:41 2000  Tim Janik  <timj@gtk.org>

	* gtk/gdk-pixbuf-loader.c (gdk_pixbuf_loader_class_init): urg, removed
	implementation of gtk_marshal_VOID__INT_INT_INT_INT. if people do that,
	couldn't they at least give it a non-standard name?
	
	* gtk/gtktextlayout.c: arg! yet another implementation of
	gtk_marshal_VOID__INT_INT_INT_INT(), is this a conspiracy?

	* gtk/gtktextbuffer.c: gotcha! captured a vagabonding
	gtk_marshal_VOID__INT_POINTER_INT() implementation, braught it back
	home. now i know this _is_ a conspiracy.

	* gtk/gtkwidget.c (gtk_widget_class_init): marshaller fixups for
	::state-changed.

	* gtk/gtkaccelgroup.c (gtk_accel_group_create_remove): 
	(gtk_accel_group_create_add): marshaller signature fixups.

	* gtk/gtklistitem.c (gtk_list_item_class_init): signal creation fixups,
	pass in GTK_TYPE_SCROLL_TYPE instead of GTK_TYPE_ENUM.

	* gtk/gtkobject.[hc]: removed GTK_CONNECTED flag, it's not valid
	anymore.

Tue Oct 24 23:59:21 2000  Tim Janik  <timj@gtk.org>

	* docs/reference/Makefile.am: disabled SUBDIRS for the moment, since
	due to the signal system changes, it wouldn't build currently. to
	be fixed soon.

	* docs/Changes-2.0.txt: GtkSignal/GSignal updates.

	* gtk/gtkwidget.c: ::direction_changed takes an enum as argument,
	so it needs gtk_marshal_VOID__ENUM() instead of
	gtk_marshal_NONE__UINT().

	* gdk/gdk*.c: adapted type registration functions.

	* gtk/gtkbindings.c:
	* gtk/gtkaccelgroup.c: operate on GSignalQuery, GtkSignalQuery is
	gone.

	* gtk/gtkenums.h: define GtkSignalRunType in terms of GSignalType.

	* gtk/gtkobject.c:
	(gtk_object_destroy):
	(gtk_object_shutdown): fixed recursion guards. basically we have to